--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 27.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="峨眉公交线网图" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-	 x="0px" y="0px" viewBox="0 0 4426 3460.4" style="enable-background:new 0 0 4426 3460.4;" xml:space="preserve">
-<style type="text/css">
+        <title>峨眉公交线网图</title>
+	    <style type="text/css">
 	.st0{display:none;}
 	.st1{display:inline;fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;}
 	.st2{display:inline;}
@@ -84,6 +78,11 @@
 	.st67{fill:none;stroke:#000000;stroke-width:0.75;stroke-linecap:round;stroke-linejoin:round;}
 	.st68{fill:none;stroke:#FFFFFF;stroke-width:0.5;stroke-miterlimit:10;}
 </style>
+    </head>
+    <body>
+<?xml version="1.0" encoding="utf-8"?>
+<svg version="1.1" id="峨眉公交线网图" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+	 x="0px" y="0px" viewBox="0 0 4426 3460.4" style="enable-background:new 0 0 4426 3460.4;" xml:space="preserve">
 <g id="底图_00000091001665335362165360000006084670612014490037_" class="st0">
 	<rect id="背景" x="0.3" y="0.2" class="st1" width="4412.5" height="3460.4"/>
 	<g id="地图" class="st2">
