--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>峨眉公交线网图</title>
+    <link rel="shortcut icon" href="logo.ico">
 </head>
 <body>
     <?xml version="1.0" encoding="UTF-8"?>
