--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>船山区公交线网图</title>
+		<title>峨眉公交线网图</title>
 		<meta charset="utf-8">
 	    <link rel="shortcut icon" href="logo.ico">
 	</head>
