--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 	<head>
 		<title>峨眉公交线网图</title>
 		<meta charset="utf-8">
-	    <link rel="shortcut icon" href="logo.ico">
+		<link rel="shortcut icon" href="logo.ico">
+		<style>
+			body{
+				width: 200%;
+				height:200%;
+			}
+		</style>
 	</head>
 	<body>
 		<object type="image/svg+xml" data="2401.svg"></object>
