--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="logo.ico">
 		<style>
-			body{
-				width: 400%;
-				height: 400%;
-			}
+      @media (min-width: 960px) {
+      body {
+        width: 100%;
+        height: 100%;
+      }}
+      @media (max-width: 959px) {
+      body {
+        width: 400%;
+        height: 400%;
+      }}
 		</style>
 	</head>
 	<body>
